<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="dialog"
            type="com.dev.eventmanagement.CustomDialog" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3E80B4"
        android:orientation="vertical"
        android:padding="@dimen/dimen_ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/sort_list_by_date"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_twenty"
            android:background="#3E80B4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_twenty"
                android:background="@android:color/white"
                android:onClick="@{(v)->dialog.onClick(v)}"
                android:text="@string/start_date"
                android:textColor="#5DBCD2"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="@dimen/dimen_twenty"
                android:background="@android:color/white"
                android:onClick="@{(v)->dialog.onClick(v)}"
                android:text="@string/end_date"
                android:textColor="#5DBCD2"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:onClick="@{(v)->dialog.onClick(v)}"
                android:text="@string/done"
                android:textColor="#5DBCD2"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</layout>