<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dev.eventmanagement.model.EventListItem" />

        <variable
            name="activity"
            type="com.dev.eventmanagement.EventsActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/colorWhite" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBarView"
            android:orientation="vertical"
            android:padding="@dimen/dimen_ten">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title">


                <EditText
                    android:id="@+id/etEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={viewModel.eventTitle}"
                    tools:targetApi="o" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_thirty"
                android:hint="@string/selectDateTime"
                android:onClick="@{()->activity.showDatePicker()}"
                android:padding="@dimen/dimen_twenty"
                android:text="@{viewModel.eventDate}"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/text_size_twenty" />

            <Button
                android:id="@+id/btnEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_thirty"
                android:onClick="@{()->activity.addUpdateEvent()}"
                android:padding="@dimen/dimen_twenty"
                android:text="@string/createEvent"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_twenty" />


        </LinearLayout>
    </RelativeLayout>
</layout>